--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "0.7.0" %}
+{% set version = '0.7.0' %}
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
 
@@ -7,27 +7,28 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: highcharter_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/highcharter_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/highcharter/highcharter_{{ version }}.tar.gz
   sha256: 79212e9c2f20723366fca1bb3dac02f3f32335bcdce63db024859e8c5b11db61
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
   number: 0
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
 
 requirements:
   build:
+    - {{posix}}zip               # [win]
   host:
     - r-base
     - r-assertthat
     - r-broom
-    - r-dplyr
+    - r-crosstalk
+    - r-dplyr >=0.7.0
     - r-htmltools
     - r-htmlwidgets
     - r-igraph
@@ -36,17 +37,21 @@ requirements:
     - r-magrittr
     - r-purrr
     - r-quantmod
+    - r-rlang >=0.1.1
     - r-rlist
     - r-stringr
     - r-tibble >=1.1
     - r-tidyr
+    - r-whisker
     - r-xts
+    - r-yaml
     - r-zoo
   run:
     - r-base
     - r-assertthat
     - r-broom
-    - r-dplyr
+    - r-crosstalk
+    - r-dplyr >=0.7.0
     - r-htmltools
     - r-htmlwidgets
     - r-igraph
@@ -55,11 +60,14 @@ requirements:
     - r-magrittr
     - r-purrr
     - r-quantmod
+    - r-rlang >=0.1.1
     - r-rlist
     - r-stringr
     - r-tibble >=1.1
     - r-tidyr
+    - r-whisker
     - r-xts
+    - r-yaml
     - r-zoo
 
 test:
@@ -71,15 +79,33 @@ about:
   home: http://jkunst.com/highcharter
   license: MIT
   summary: A wrapper for the 'Highcharts' library including shortcut functions to plot R objects.
-    'Highcharts'  <http://www.highcharts.com/> is a charting library offering numerous
+    'Highcharts' <http://www.highcharts.com/> is a charting library offering numerous
     chart types with a simple configuration syntax.
   license_family: MIT
 
 extra:
   recipe-maintainers:
-    - johanneskoester
-    - bgruening
-    - daler
-    - jdblischak
-    - cbrueffer
-    - dbast
+    - conda-forge/r
+
+# Package: highcharter
+# Type: Package
+# Version: 0.7.0
+# Title: A Wrapper for the 'Highcharts' Library
+# Description: A wrapper for the 'Highcharts' library including shortcut functions to plot R objects. 'Highcharts' <http://www.highcharts.com/> is a charting library offering numerous chart types with a simple configuration syntax.
+# Authors@R: c( person("Joshua", "Kunst", role = c("aut", "cre"), email = "jbkunst@gmail.com"), person("Nuno", "Agostinho", role = c("ctb"), comment  = "hchart.survfit, densities and hc_add_series_scatter"), person("Danton", "Noriega", role = c("ctb"), comment  = "hcaes_"), person("Martin John ", "Hadley", role = c("ctb"), comment  = "hc_add_event_point improvement"), person("Eduardo", "Flores", role = c("ctb"), comment  = "First version hc_add_series_df_tidy"), person("Dean", "Kilfoyle", role = c("ctb"), comment  = "First version hc_add_series_boxplot"), person("Adline", "Dsilva", role = c("ctb"), comment  = "First version Matrix heatmap"), person("Kamil", "Slowikowski", role = c("ctb"), comment = c(ORCID = "0000-0002-2843-6370")), person("Christian", "Minich", role = c("ctb"), comment  = "hcaes mutate_mapping improvement"), person("Jonathan", "Armond", role = c("ctb"), comment = "mutate_mapping bugfix") )
+# URL: http://jkunst.com/highcharter
+# BugReports: https://github.com/jbkunst/highcharter/issues
+# License: MIT + file LICENSE
+# RoxygenNote: 6.1.1
+# Encoding: UTF-8
+# Depends: R (>= 2.10)
+# Imports: htmlwidgets, magrittr, purrr, rlist, assertthat, zoo, dplyr (>= 0.7.0), tibble (>= 1.1), stringr, broom, xts, quantmod, tidyr, htmltools, jsonlite, igraph, lubridate, crosstalk, yaml, rlang(>= 0.1.1), whisker
+# Suggests: knitr, rmarkdown, survival, ggplot2, httr, viridisLite, shiny, MASS, gapminder
+# VignetteBuilder: knitr
+# LazyData: true
+# NeedsCompilation: no
+# Packaged: 2019-01-15 16:23:07 UTC; jkunstf
+# Author: Joshua Kunst [aut, cre], Nuno Agostinho [ctb] (hchart.survfit, densities and hc_add_series_scatter), Danton Noriega [ctb] (hcaes_), Martin John Hadley [ctb] (hc_add_event_point improvement), Eduardo Flores [ctb] (First version hc_add_series_df_tidy), Dean Kilfoyle [ctb] (First version hc_add_series_boxplot), Adline Dsilva [ctb] (First version Matrix heatmap), Kamil Slowikowski [ctb] (<https://orcid.org/0000-0002-2843-6370>), Christian Minich [ctb] (hcaes mutate_mapping improvement), Jonathan Armond [ctb] (mutate_mapping bugfix)
+# Maintainer: Joshua Kunst <jbkunst@gmail.com>
+# Repository: CRAN
+# Date/Publication: 2019-01-15 16:50:03 UTC
