--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,7 +27,6 @@ requirements:
     - r-base
     - r-assertthat
     - r-broom
-    - r-crosstalk
     - r-dplyr >=0.7.0
     - r-htmltools
     - r-htmlwidgets
@@ -37,12 +36,12 @@ requirements:
     - r-magrittr
     - r-purrr
     - r-quantmod
+    - r-rjson
     - r-rlang >=0.1.1
     - r-rlist
-    - r-stringr
+    - r-stringr >=1.3.0
     - r-tibble >=1.1
     - r-tidyr
-    - r-whisker
     - r-xts
     - r-yaml
     - r-zoo
@@ -50,7 +49,6 @@ requirements:
     - r-base
     - r-assertthat
     - r-broom
-    - r-crosstalk
     - r-dplyr >=0.7.0
     - r-htmltools
     - r-htmlwidgets
@@ -60,12 +58,12 @@ requirements:
     - r-magrittr
     - r-purrr
     - r-quantmod
+    - r-rjson
     - r-rlang >=0.1.1
     - r-rlist
-    - r-stringr
+    - r-stringr >=1.3.0
     - r-tibble >=1.1
     - r-tidyr
-    - r-whisker
     - r-xts
     - r-yaml
     - r-zoo
@@ -80,10 +78,10 @@ about:
   license: MIT
   summary: A wrapper for the 'Highcharts' library including shortcut functions to plot R objects. 'Highcharts' <http://www.highcharts.com/> is a charting library offering numerous chart types with a simple configuration syntax.
   license_family: MIT
-
   license_file:
     - {{ environ["PREFIX"] }}/lib/R/share/licenses/MIT
     - LICENSE
+
 extra:
   recipe-maintainers:
     - conda-forge/r
